feat: 页面布局处理

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<style>
+  body {
+    display: flex;
+    min-height: 100vh;
+  }
+</style>
 <body>
   <div id="app"></div>
-  <!-- __APP_SCRIPT__ -->
+  <div id="component" style="padding: 10px;"></div>
+  <script type="module" src="/examples/index.tsx"></script>
+  <!-- __COMPONET_SCRIPT__ -->
 </body>
 </html>
