--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     }
   </script>
 
-  <div style="display: flex;">
+  <div style="display: flex; width: 100%;">
     <div id="menu"></div>
-    <div id='component' style="padding: 10px;">1</div>
+    <div id='component' style="padding: 10px; width: 100%;">1</div>
   </div>
   <script type="module" src="./src/main.tsx"></script>
 </body>
